@@ -94,8 +94,8 @@ public class SearchGroupsFieldCommand implements Command<SearchGroupsFieldComman
 
   @Override
   public List<Collector> create() throws IOException {
-    List<Collector> collectors = new ArrayList<>();
-    FieldType fieldType = field.getType();
+    final List<Collector> collectors = new ArrayList<>(2);
+    final FieldType fieldType = field.getType();
     if (topNGroups > 0) {
       if (fieldType.getNumericType() != null) {
         ValueSource vs = fieldType.getValueSource(field, null);
@@ -120,7 +120,7 @@ public class SearchGroupsFieldCommand implements Command<SearchGroupsFieldComman
   @Override
   public SearchGroupsFieldCommandResult result() {
     final Collection<SearchGroup<BytesRef>> topGroups;
-    if (topNGroups > 0) {
+    if (firstPassGroupingCollector != null) {
       if (field.getType().getNumericType() != null) {
         topGroups = GroupConverter.fromMutable(field, firstPassGroupingCollector.getTopGroups(0, true));
       } else {
@@ -130,7 +130,7 @@ public class SearchGroupsFieldCommand implements Command<SearchGroupsFieldComman
       topGroups = Collections.emptyList();
     }
     final Integer groupCount;
-    if (includeGroupCount) {
+    if (allGroupsCollector != null) {
       groupCount = allGroupsCollector.getGroupCount();
     } else {
       groupCount = null;
