@@ -557,6 +557,8 @@ Other Changes
 * SOLR-8194: Improve error reporting for null documents in UpdateRequest (Markus
   Jelsma, Alan Woodward)
 
+* SOLR-8277: (Search|Top)GroupsFieldCommand tweaks (Christine Poerschke)
+
 ==================  5.3.1 ==================
 
 Bug Fixes
